# WPEBackend-android

./: CMakeLists.txt  README.md
include/wpe-android/: view-backend-exportable.h  view-backend.h
src/: android.cpp  hacks.cpp  interfaces.h  ipc-android.h  ipc-messages.h  ipc.cpp  ipc.h  logging.h  renderer-backend-egl.cpp  renderer-host-private.h  renderer-host.cpp  renderer-host.h  view-backend-exportable.cpp  view-backend-private.h  view-backend.cpp  view-backend.h
